add services ps: this git has a lot of errors and modification in dtos, models... the next git will fixe all that this commit just for sharing code with partner to see the progresse